--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 </head>
 <body>
     <main>
-        <div class="passo ativo" id="passo-0">
+        <div class="passo ativo" id="passo-0"> 
+            <img href="./Cristiano-Ronaldo-ceremony-rename-airport-Santa-Cruz-Madeira-Portugal-March-29-2017.png"></img>
             <p>Após uma peneira que voce fez na semana passada, voce recebeu uma proposta de dois gigantes, que se interessaram em seu futebol</p>
             <button class="btn-proximo" data-proximo="1">Ser ponta esquerda titular no corinthians</button>
             <button class="btn-proximo" data-proximo="1">Ser meia atacante titular do São Paulo</button>
