--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         </div>
 
         <div class="passo" id="passo-1">
+            <img href="./cris.png"></img>
             <p>Seu time está na final de Libertadores porém você não começa de titular e sim no banco de reserva</p>
             <button class="btn-proximo" data-proximo="2">Ir para o aquecimento</button>
         </div>
