--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <main>
         <div class="passo ativo" id="passo-0"> 
-            <img scr=img/"Cristiano-Ronaldo-ceremony-rename-airport-Santa-Cruz-Madeira-Portugal-March-29-2017.png"></img>
+            <img scr=img/"Cristiano-Ronaldo-ceremony-rename-airport-Santa-Cruz-Madeira-Portugal-March-29-2017.png">
             <p>Após uma peneira que voce fez na semana passada, voce recebeu uma proposta de dois gigantes, que se interessaram em seu futebol</p>
             <button class="btn-proximo" data-proximo="1">Ser ponta esquerda titular no corinthians</button>
             <button class="btn-proximo" data-proximo="1">Ser meia atacante titular do São Paulo</button>
